--- a/Code Insight/1. Order Cycle Time Order.ipynb
+++ b/Code Insight/1. Order Cycle Time Order.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,17 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define MySQL details\n",
-    "# DATABASE HOST AND PORT ARE HIDDEN"
+    "host   = 'okegarden-laravel-prod-db-2024-11-15-0200.cgwhhgh85mr3.ap-southeast-3.rds.amazonaws.com'\n",
+    "port   = '3306'\n",
+    "user   = 'intern_mes'\n",
+    "passwd = 'sdfDFLES342982Ddlsdksd'\n",
+    "databs = 'okegarden_laravel_prod_db'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +460,7 @@
        "4                7.3989  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +710,7 @@
        "2              306.6925  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +745,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,31 +780,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "id                                int64\n",
-       "subject_type                     object\n",
-       "subject_id                        int64\n",
-       "properties                       object\n",
-       "created_at               datetime64[ns]\n",
-       "updated_at               datetime64[ns]\n",
-       "old_status                       object\n",
-       "old_created_at           datetime64[ns]\n",
-       "old_updated_at           datetime64[ns]\n",
-       "attributes_status                object\n",
-       "attributes_created_at    datetime64[ns]\n",
-       "attributes_updated_at    datetime64[ns]\n",
-       "order_cycle_time                float64\n",
-       "id_datetime                     float64\n",
-       "time_interval_status            float64\n",
+       "id                                     int64\n",
+       "subject_type                          object\n",
+       "subject_id                             int64\n",
+       "properties                            object\n",
+       "created_at                    datetime64[ns]\n",
+       "updated_at                    datetime64[ns]\n",
+       "old_status                            object\n",
+       "old_created_at                datetime64[ns]\n",
+       "old_updated_at                datetime64[ns]\n",
+       "attributes_status                     object\n",
+       "attributes_created_at    datetime64[ns, UTC]\n",
+       "attributes_updated_at         datetime64[ns]\n",
+       "order_cycle_time                     float64\n",
+       "id_datetime                          float64\n",
+       "time_interval_status                 float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +832,7 @@
        "(861, 15)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -875,6 +879,7 @@
        "      <th>subject_id</th>\n",
        "      <th>created_at</th>\n",
        "      <th>updated_at</th>\n",
+       "      <th>attributes_created_at</th>\n",
        "      <th>order_cycle_time</th>\n",
        "      <th>id_datetime</th>\n",
        "      <th>time_interval_status</th>\n",
@@ -887,6 +892,7 @@
        "      <td>861.000000</td>\n",
        "      <td>811</td>\n",
        "      <td>761</td>\n",
+       "      <td>780</td>\n",
        "      <td>792.000000</td>\n",
        "      <td>262.000000</td>\n",
        "      <td>552.000000</td>\n",
@@ -897,6 +903,7 @@
        "      <td>956.945412</td>\n",
        "      <td>2024-11-03 20:48:40.780517888</td>\n",
        "      <td>2024-11-03 17:12:42.189224704</td>\n",
+       "      <td>2024-10-15 10:08:19.946153728</td>\n",
        "      <td>457.720041</td>\n",
        "      <td>79.393130</td>\n",
        "      <td>204.383777</td>\n",
@@ -907,6 +914,7 @@
        "      <td>19.000000</td>\n",
        "      <td>2024-08-25 18:29:15</td>\n",
        "      <td>2024-08-25 18:29:15</td>\n",
+       "      <td>2024-06-28 02:45:41</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>3.510000</td>\n",
@@ -917,6 +925,7 @@
        "      <td>816.000000</td>\n",
        "      <td>2024-10-28 12:29:05</td>\n",
        "      <td>2024-10-28 15:32:38</td>\n",
+       "      <td>2024-10-11 03:12:41</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>58.250000</td>\n",
        "      <td>7.258150</td>\n",
@@ -927,6 +936,7 @@
        "      <td>988.000000</td>\n",
        "      <td>2024-11-04 06:50:59</td>\n",
        "      <td>2024-11-04 07:07:38</td>\n",
+       "      <td>2024-10-28 00:37:28</td>\n",
        "      <td>27.095300</td>\n",
        "      <td>75.500000</td>\n",
        "      <td>27.857500</td>\n",
@@ -937,6 +947,7 @@
        "      <td>1340.000000</td>\n",
        "      <td>2024-11-10 17:30:10</td>\n",
        "      <td>2024-11-10 17:30:10</td>\n",
+       "      <td>2024-11-05 05:28:44</td>\n",
        "      <td>560.436375</td>\n",
        "      <td>102.000000</td>\n",
        "      <td>134.853075</td>\n",
@@ -947,6 +958,7 @@
        "      <td>1498.000000</td>\n",
        "      <td>2024-11-15 08:47:27</td>\n",
        "      <td>2024-11-15 08:47:27</td>\n",
+       "      <td>2024-11-15 01:47:27</td>\n",
        "      <td>3246.923900</td>\n",
        "      <td>138.000000</td>\n",
        "      <td>3219.215300</td>\n",
@@ -955,6 +967,7 @@
        "      <th>std</th>\n",
        "      <td>5892.647478</td>\n",
        "      <td>417.783156</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>807.073478</td>\n",
@@ -976,28 +989,28 @@
        "max    16519.000000  1498.000000            2024-11-15 08:47:27   \n",
        "std     5892.647478   417.783156                            NaN   \n",
        "\n",
-       "                          updated_at  order_cycle_time  id_datetime  \\\n",
-       "count                            761        792.000000   262.000000   \n",
-       "mean   2024-11-03 17:12:42.189224704        457.720041    79.393130   \n",
-       "min              2024-08-25 18:29:15          0.000000     8.000000   \n",
-       "25%              2024-10-28 15:32:38          0.000000    58.250000   \n",
-       "50%              2024-11-04 07:07:38         27.095300    75.500000   \n",
-       "75%              2024-11-10 17:30:10        560.436375   102.000000   \n",
-       "max              2024-11-15 08:47:27       3246.923900   138.000000   \n",
-       "std                              NaN        807.073478    29.789717   \n",
+       "                          updated_at          attributes_created_at  \\\n",
+       "count                            761                            780   \n",
+       "mean   2024-11-03 17:12:42.189224704  2024-10-15 10:08:19.946153728   \n",
+       "min              2024-08-25 18:29:15            2024-06-28 02:45:41   \n",
+       "25%              2024-10-28 15:32:38            2024-10-11 03:12:41   \n",
+       "50%              2024-11-04 07:07:38            2024-10-28 00:37:28   \n",
+       "75%              2024-11-10 17:30:10            2024-11-05 05:28:44   \n",
+       "max              2024-11-15 08:47:27            2024-11-15 01:47:27   \n",
+       "std                              NaN                            NaN   \n",
        "\n",
-       "       time_interval_status  \n",
-       "count            552.000000  \n",
-       "mean             204.383777  \n",
-       "min                3.510000  \n",
-       "25%                7.258150  \n",
-       "50%               27.857500  \n",
-       "75%              134.853075  \n",
-       "max             3219.215300  \n",
-       "std              474.598688  "
+       "       order_cycle_time  id_datetime  time_interval_status  \n",
+       "count        792.000000   262.000000            552.000000  \n",
+       "mean         457.720041    79.393130            204.383777  \n",
+       "min            0.000000     8.000000              3.510000  \n",
+       "25%            0.000000    58.250000              7.258150  \n",
+       "50%           27.095300    75.500000             27.857500  \n",
+       "75%          560.436375   102.000000            134.853075  \n",
+       "max         3246.923900   138.000000           3219.215300  \n",
+       "std          807.073478    29.789717            474.598688  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1096,7 @@
        "2  App\\Models\\OrderGardenCareDetail       1078.391605  44 Hari"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1245,7 @@
        "2  App\\Models\\OrderGardenCareDetail          764.2339               31 Hari"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1310,6 +1323,13 @@
     "- **OrderDesign** membutuhkan waktu rata-rata 29 hari untuk diselesaikan.\n",
     "- **OrderGardenCareDetail** adalah jenis pesanan yang paling lama diselesaikan, membutuhkan waktu rata-rata 31 hari.  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
