--- a/Code Insight/2. Order Cycle Time DesignBuild.ipynb
+++ b/Code Insight/2. Order Cycle Time DesignBuild.ipynb
@@ -47,12 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define MySQL details\n",
-    "# DATABASE HOST AND PORT ARE HIDDEN"
+    "host   = 'okegarden-laravel-prod-db-2024-11-15-0200.cgwhhgh85mr3.ap-southeast-3.rds.amazonaws.com'\n",
+    "port   = '3306'\n",
+    "user   = 'intern_mes'\n",
+    "passwd = 'sdfDFLES342982Ddlsdksd'\n",
+    "databs = 'okegarden_laravel_prod_db'"
    ]
   },
   {
