--- a/Code Insight/3. Waktu yg dibutuhkan (interval waktu) untuk tiap proses berapa lama.ipynb
+++ b/Code Insight/3. Waktu yg dibutuhkan (interval waktu) untuk tiap proses berapa lama.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,17 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define MySQL details\n",
-    "# DATABASE HOST AND PORT ARE HIDDEN"
+    "host   = 'okegarden-laravel-prod-db-2024-11-15-0200.cgwhhgh85mr3.ap-southeast-3.rds.amazonaws.com'\n",
+    "port   = '3306'\n",
+    "user   = 'intern_mes'\n",
+    "passwd = 'sdfDFLES342982Ddlsdksd'\n",
+    "databs = 'okegarden_laravel_prod_db'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +441,7 @@
        "4                7.3989  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +484,7 @@
        "       'App\\\\Models\\\\OrderGarden'], dtype=object)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +676,7 @@
        "5                7.3989  "
       ]
      },
-     "execution_count": 154,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +952,7 @@
        "5                7.3989  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +987,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1046,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1074,7 @@
        "(861, 15)"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1133,10 +1137,10 @@
        "      <td>861.000000</td>\n",
        "      <td>811</td>\n",
        "      <td>761</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
+       "      <td>540</td>\n",
+       "      <td>540</td>\n",
+       "      <td>780</td>\n",
+       "      <td>780</td>\n",
        "      <td>792.000000</td>\n",
        "      <td>262.000000</td>\n",
        "      <td>552.000000</td>\n",
@@ -1147,10 +1151,10 @@
        "      <td>956.945412</td>\n",
        "      <td>2024-11-03 20:48:40.780517888</td>\n",
        "      <td>2024-11-03 17:12:42.189224704</td>\n",
-       "      <td>2024-10-19 03:37:00.333333248</td>\n",
-       "      <td>2024-10-23 00:00:00</td>\n",
-       "      <td>2024-10-19 03:37:00.333333248</td>\n",
-       "      <td>2024-10-19 10:13:54.583333632</td>\n",
+       "      <td>2024-10-06 10:32:53.529629696</td>\n",
+       "      <td>2024-10-26 03:50:07.751851776</td>\n",
+       "      <td>2024-10-15 10:08:19.946153728</td>\n",
+       "      <td>2024-11-03 18:47:56.365384704</td>\n",
        "      <td>457.720041</td>\n",
        "      <td>79.393130</td>\n",
        "      <td>204.383777</td>\n",
@@ -1161,10 +1165,10 @@
        "      <td>19.000000</td>\n",
        "      <td>2024-08-25 18:29:15</td>\n",
        "      <td>2024-08-25 18:29:15</td>\n",
-       "      <td>2024-08-25 18:29:15</td>\n",
-       "      <td>2024-08-29 00:00:00</td>\n",
-       "      <td>2024-08-25 18:29:15</td>\n",
-       "      <td>2024-08-25 18:29:15</td>\n",
+       "      <td>2024-06-28 02:45:41</td>\n",
+       "      <td>2024-07-02 03:21:37</td>\n",
+       "      <td>2024-06-28 02:45:41</td>\n",
+       "      <td>2024-10-21 09:00:39</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>3.510000</td>\n",
@@ -1175,10 +1179,10 @@
        "      <td>816.000000</td>\n",
        "      <td>2024-10-28 12:29:05</td>\n",
        "      <td>2024-10-28 15:32:38</td>\n",
-       "      <td>2024-10-12 04:04:47</td>\n",
-       "      <td>2024-10-16 18:00:00</td>\n",
-       "      <td>2024-10-12 04:04:47</td>\n",
-       "      <td>2024-10-12 04:04:47</td>\n",
+       "      <td>2024-09-22 15:01:09.750000128</td>\n",
+       "      <td>2024-10-24 08:32:43</td>\n",
+       "      <td>2024-10-11 03:12:41</td>\n",
+       "      <td>2024-10-28 09:47:13</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>58.250000</td>\n",
        "      <td>7.258150</td>\n",
@@ -1189,10 +1193,10 @@
        "      <td>988.000000</td>\n",
        "      <td>2024-11-04 06:50:59</td>\n",
        "      <td>2024-11-04 07:07:38</td>\n",
-       "      <td>2024-10-26 18:58:55.500000</td>\n",
-       "      <td>2024-10-31 00:00:00</td>\n",
-       "      <td>2024-10-26 18:58:55.500000</td>\n",
-       "      <td>2024-10-28 10:40:21</td>\n",
+       "      <td>2024-10-21 09:00:39</td>\n",
+       "      <td>2024-11-01 03:21:01.500000</td>\n",
+       "      <td>2024-10-28 00:37:28</td>\n",
+       "      <td>2024-11-03 23:50:55</td>\n",
        "      <td>27.095300</td>\n",
        "      <td>75.500000</td>\n",
        "      <td>27.857500</td>\n",
@@ -1203,10 +1207,10 @@
        "      <td>1340.000000</td>\n",
        "      <td>2024-11-10 17:30:10</td>\n",
        "      <td>2024-11-10 17:30:10</td>\n",
-       "      <td>2024-11-01 20:29:28.249999872</td>\n",
-       "      <td>2024-11-02 06:00:00</td>\n",
-       "      <td>2024-11-01 20:29:28.249999872</td>\n",
-       "      <td>2024-11-01 20:29:28.249999872</td>\n",
+       "      <td>2024-11-01 13:20:59</td>\n",
+       "      <td>2024-11-06 10:28:05</td>\n",
+       "      <td>2024-11-05 05:28:44</td>\n",
+       "      <td>2024-11-10 10:30:10</td>\n",
        "      <td>560.436375</td>\n",
        "      <td>102.000000</td>\n",
        "      <td>134.853075</td>\n",
@@ -1217,10 +1221,10 @@
        "      <td>1498.000000</td>\n",
        "      <td>2024-11-15 08:47:27</td>\n",
        "      <td>2024-11-15 08:47:27</td>\n",
-       "      <td>2024-11-06 09:06:29</td>\n",
-       "      <td>2024-11-09 00:00:00</td>\n",
-       "      <td>2024-11-06 09:06:29</td>\n",
-       "      <td>2024-11-06 09:06:29</td>\n",
+       "      <td>2024-11-14 02:32:30</td>\n",
+       "      <td>2024-11-14 13:36:27</td>\n",
+       "      <td>2024-11-15 01:47:27</td>\n",
+       "      <td>2024-11-15 01:47:27</td>\n",
        "      <td>3246.923900</td>\n",
        "      <td>138.000000</td>\n",
        "      <td>3219.215300</td>\n",
@@ -1255,33 +1259,33 @@
        "std     5892.647478   417.783156                            NaN   \n",
        "\n",
        "                          updated_at                 old_created_at  \\\n",
-       "count                            761                             12   \n",
-       "mean   2024-11-03 17:12:42.189224704  2024-10-19 03:37:00.333333248   \n",
-       "min              2024-08-25 18:29:15            2024-08-25 18:29:15   \n",
-       "25%              2024-10-28 15:32:38            2024-10-12 04:04:47   \n",
-       "50%              2024-11-04 07:07:38     2024-10-26 18:58:55.500000   \n",
-       "75%              2024-11-10 17:30:10  2024-11-01 20:29:28.249999872   \n",
-       "max              2024-11-15 08:47:27            2024-11-06 09:06:29   \n",
+       "count                            761                            540   \n",
+       "mean   2024-11-03 17:12:42.189224704  2024-10-06 10:32:53.529629696   \n",
+       "min              2024-08-25 18:29:15            2024-06-28 02:45:41   \n",
+       "25%              2024-10-28 15:32:38  2024-09-22 15:01:09.750000128   \n",
+       "50%              2024-11-04 07:07:38            2024-10-21 09:00:39   \n",
+       "75%              2024-11-10 17:30:10            2024-11-01 13:20:59   \n",
+       "max              2024-11-15 08:47:27            2024-11-14 02:32:30   \n",
        "std                              NaN                            NaN   \n",
        "\n",
-       "            old_updated_at          attributes_created_at  \\\n",
-       "count                   12                             12   \n",
-       "mean   2024-10-23 00:00:00  2024-10-19 03:37:00.333333248   \n",
-       "min    2024-08-29 00:00:00            2024-08-25 18:29:15   \n",
-       "25%    2024-10-16 18:00:00            2024-10-12 04:04:47   \n",
-       "50%    2024-10-31 00:00:00     2024-10-26 18:58:55.500000   \n",
-       "75%    2024-11-02 06:00:00  2024-11-01 20:29:28.249999872   \n",
-       "max    2024-11-09 00:00:00            2024-11-06 09:06:29   \n",
-       "std                    NaN                            NaN   \n",
+       "                      old_updated_at          attributes_created_at  \\\n",
+       "count                            540                            780   \n",
+       "mean   2024-10-26 03:50:07.751851776  2024-10-15 10:08:19.946153728   \n",
+       "min              2024-07-02 03:21:37            2024-06-28 02:45:41   \n",
+       "25%              2024-10-24 08:32:43            2024-10-11 03:12:41   \n",
+       "50%       2024-11-01 03:21:01.500000            2024-10-28 00:37:28   \n",
+       "75%              2024-11-06 10:28:05            2024-11-05 05:28:44   \n",
+       "max              2024-11-14 13:36:27            2024-11-15 01:47:27   \n",
+       "std                              NaN                            NaN   \n",
        "\n",
        "               attributes_updated_at  order_cycle_time  id_datetime  \\\n",
-       "count                             12        792.000000   262.000000   \n",
-       "mean   2024-10-19 10:13:54.583333632        457.720041    79.393130   \n",
-       "min              2024-08-25 18:29:15          0.000000     8.000000   \n",
-       "25%              2024-10-12 04:04:47          0.000000    58.250000   \n",
-       "50%              2024-10-28 10:40:21         27.095300    75.500000   \n",
-       "75%    2024-11-01 20:29:28.249999872        560.436375   102.000000   \n",
-       "max              2024-11-06 09:06:29       3246.923900   138.000000   \n",
+       "count                            780        792.000000   262.000000   \n",
+       "mean   2024-11-03 18:47:56.365384704        457.720041    79.393130   \n",
+       "min              2024-10-21 09:00:39          0.000000     8.000000   \n",
+       "25%              2024-10-28 09:47:13          0.000000    58.250000   \n",
+       "50%              2024-11-03 23:50:55         27.095300    75.500000   \n",
+       "75%              2024-11-10 10:30:10        560.436375   102.000000   \n",
+       "max              2024-11-15 01:47:27       3246.923900   138.000000   \n",
        "std                              NaN        807.073478    29.789717   \n",
        "\n",
        "       time_interval_status  \n",
@@ -1295,7 +1299,7 @@
        "std              474.598688  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1402,7 @@
        "freq                 194  "
       ]
      },
-     "execution_count": 165,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1424,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1537,7 +1541,7 @@
        "7                    5 Hari  "
       ]
      },
-     "execution_count": 166,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1717,7 @@
        "5                    3 Hari  "
       ]
      },
-     "execution_count": 168,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1737,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1866,7 +1870,7 @@
        "3                   25 Hari  "
       ]
      },
-     "execution_count": 170,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1908,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
