--- a/Data analisis & visualization.ipynb
+++ b/Data analisis & visualization.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,17 +126,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define MySQL details\n",
-    "# DATABASE HOST AND PORT ARE HIDDEN"
+    "host   = 'okegarden-laravel-prod-db-2024-11-15-0200.cgwhhgh85mr3.ap-southeast-3.rds.amazonaws.com'\n",
+    "port   = '3306'\n",
+    "user   = 'intern_mes'\n",
+    "passwd = 'sdfDFLES342982Ddlsdksd'\n",
+    "databs = 'okegarden_laravel_prod_db'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +498,7 @@
        "4                7.3989  "
       ]
      },
-     "execution_count": 168,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +540,7 @@
        "       'App\\\\Models\\\\OrderGarden'], dtype=object)"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +754,7 @@
        "5                7.3989  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +789,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +809,7 @@
        "(861, 15)"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +854,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +913,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1014,7 @@
        "2  App\\Models\\OrderGardenCareDetail       1078.391605  44 Hari"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1163,7 @@
        "2  App\\Models\\OrderGardenCareDetail          764.2339               31 Hari"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1390,7 @@
        "6     10      276.750000                   11 Hari"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1579,7 @@
        "7                    5 Hari  "
       ]
      },
-     "execution_count": 186,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1598,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1755,7 @@
        "5                    3 Hari  "
       ]
      },
-     "execution_count": 188,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1832,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1908,7 @@
        "3                   25 Hari  "
       ]
      },
-     "execution_count": 190,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1946,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2005,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2022,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2346,7 @@
        "30                1 Hari  "
       ]
      },
-     "execution_count": 193,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2374,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2668,7 +2672,7 @@
        "25            46       build_start            104.763500                4 Hari"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2710,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2757,7 +2761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2892,7 +2896,7 @@
        "11            46         in_review             55.335625                2 Hari"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2935,7 +2939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
